--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,7 @@ serde_regex = "1.1.0"
 itertools = "0.11.0"
 dissimilar = "1.0.7"
 clap = { version = "4.4.1", features = ["derive"] }
+axum-server = { version = "0.5.1", features = ["tls-rustls"] }
+rustls-pemfile = "1.0.3"
+rustls = "0.21.7"
+hyper-rustls = "0.24.1"
