--- a/example-config.yaml
+++ b/example-config.yaml
@@ -1,8 +1,6 @@
 proxies:
   - listen_on:
-      url: https://localhost:18080/proxy
-      certificate_file: certificate.pem
-      key_file: key.pem
+      url: http://localhost:18080/proxy
     connect_to:
       url: http://localhost:9100/metrics
     label_filters:
