--- a/example-config.yaml
+++ b/example-config.yaml
@@ -1,6 +1,6 @@
 proxies:
   - listen_on:
-      url: http://localhost:18080/proxy
+      url: http://0.0.0.0:18080/proxy
     connect_to:
       url: http://localhost:9100/metrics
     label_filters:
