Add Prometheus metrics.
Currently, this work depends on a fork of the axum-otel-metrics crate, stored at https://github.com/DFINITYManu/axum-otel-metrics .

--- a/example-config.yaml
+++ b/example-config.yaml
@@ -12,3 +12,5 @@ proxies:
           - reduce_time_resolution:
               resolution: 5s
           - keep
+metrics:
+  url: http://127.0.0.1:18081/metrics
