--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ hyper-rustls = "0.24.1"
 exitcode = "1.1.2"
 pretty_assertions = "1.4.0"
 url = { version = "2.4.1", features = ["serde"] }
+prometheus = { version = "0.13.3", features = ["process"] }
+lazy_static = "1.4.0"
+axum-otel-metrics = { git = "https://github.com/DFINITYManu/axum-otel-metrics.git" }
