--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ pretty_assertions = "1.4.0"
 url = { version = "2.4.1", features = ["serde"] }
 prometheus = { version = "0.13.3", features = ["process"] }
 lazy_static = "1.4.0"
-axum-otel-metrics = { git = "https://github.com/DFINITYManu/axum-otel-metrics.git" }
+axum-otel-metrics = { git = "https://github.com/DFINITYManu/axum-otel-metrics.git", rev = "c93e2d4efdf1503ee98e60294712b4ac7942160a" }
 
 [[bin]]
 name = "metrics-proxy"
