--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
-reqwest = "0.11.18"
+reqwest = { version = "0.11.18", default-features = false }
 tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
 prometheus-parse = "0.2.4"
 axum = "0.6.19"
@@ -31,6 +31,11 @@ axum-otel-metrics = { git = "https://github.com/DFINITYManu/axum-otel-metrics.gi
 opentelemetry = { version = "0.20.0", features = ["metrics"] }
 http = "0.2.9"
 futures-util = "0.3.28"
+
+[features]
+default = ["rustls-tls-native-roots"]
+rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
+rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
 
 [[bin]]
 name = "metrics-proxy"
