--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
-reqwest = { version = "0.11.18", default-features = false }
+reqwest = { version = "0.11.18", default-features = false, features = [
+    "rustls-tls", "native-tls"
+] }
 tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
 prometheus-parse = "0.2.4"
 axum = { version = "0.7.1", features = ["macros"] }
@@ -33,7 +35,12 @@ http = "1.0.0"
 futures-util = "0.3.28"
 http-body = "1.0.0"
 http-body-util = "0.1.0"
-hyper-util = { version = "0.1.1", features = ["http1", "client", "client-legacy", "tokio"] }
+hyper-util = { version = "0.1.1", features = [
+    "http1",
+    "client",
+    "client-legacy",
+    "tokio",
+] }
 log = "0.4.20"
 pin-project-lite = "0.2.13"
 tokio-rustls = "0.24.1"
