Fix custom metrics.
Thanks to @nikolamilosa we discovered that custom metrics were
not being exported.

The documentation explains why, and cautions future users to
be careful about dependencies.

--- a/example-config.yaml
+++ b/example-config.yaml
@@ -9,7 +9,7 @@ proxies:
       # url: https://localhost:9100/metrics
       # This enables requests to SSL servers with
       # bad certificates or incorrect host names.
-      # tolerate_bad_tls: true
+      tolerate_bad_tls: true
     label_filters:
       - regex: .*
         actions:
